# Finding_Top_r_Influenctial_communities

./: README.md
Code/: CMakeCache.txt  CMakeLists.txt  Enum.cpp  Enum.h  Local.cpp  Local.h  README.md  TopR.cpp  TopR.h  argument.h  avg_test_Greedy.sh  bash.sh  file_ctrl.h  greedy.sh  main.cpp  pre_result.py  preprocess.cpp  preprocess.py  preprocess_fs.py  result.txt  serialize.cpp  serialize.h  spreprocess.cpp  stdafx.h  test_greedy.sh  xml_preprocess.py
Code/O3result_back_up_02_22/: casual_size_avg_topr_fs_k_10_r_10_s_15_20211113_123517.txt  casual_size_avg_topr_fs_k_10_r_10_s_20_20211113_124733.txt  casual_size_avg_topr_fs_k_10_r_15_s_15_20211113_125836.txt  casual_size_avg_topr_fs_k_10_r_15_s_20_20211113_131048.txt  casual_size_avg_topr_fs_k_10_r_20_s_15_20211113_132149.txt  casual_size_avg_topr_fs_k_10_r_20_s_20_20211113_133358.txt  casual_size_avg_topr_fs_k_10_r_5_s_15_20211113_121212.txt  casual_size_avg_topr_fs_k_10_r_5_s_20_20211113_122412.txt  casual_size_avg_topr_fs_k_4_r_10_s_10_20211113_052731.txt  casual_size_avg_topr_fs_k_4_r_10_s_15_20211113_054006.txt  casual_size_avg_topr_fs_k_4_r_10_s_20_20211113_055323.txt  casual_size_avg_topr_fs_k_4_r_10_s_5_20211113_051622.txt  casual_size_avg_topr_fs_k_4_r_15_s_10_20211113_061405.txt  casual_size_avg_topr_fs_k_4_r_15_s_15_20211113_062627.txt  casual_size_avg_topr_fs_k_4_r_15_s_20_20211113_063954.txt  casual_size_avg_topr_fs_k_4_r_15_s_5_20211113_060240.txt  casual_size_avg_topr_fs_k_4_r_20_s_10_20211113_070035.txt  casual_size_avg_topr_fs_k_4_r_20_s_15_20211113_071256.txt  (+174 more)
Code/spregrocess/: com-dblp-core.file  (+1 more)
